Fixing image z-index.

--- a/app/less/_panels.less
+++ b/app/less/_panels.less
@@ -96,8 +96,7 @@ div.quote-with-timeline {
 div.image-bg {
   width: 100%;
   height: 100%;
-  position: fixed;
-  z-index: 1;
+  z-index: 1001;
 
   background-position: center center;
   background-repeat: no-repeat;
