--- a/app/less/app.less
+++ b/app/less/app.less
@@ -18,7 +18,9 @@ body {
   height: 100%;
   width: 100%;
 }
-
+#media {
+  z-index: 1000;
+}
 .app {
     height: 100%;
     background: #555;
